internal/kgateway/setup/testdata/standard/csrf-gw-out.yaml
clusters:
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  metadata: {}
  name: kube_default_kubernetes_443
  type: EDS
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  metadata: {}
  name: kube_gwtest_reviews_8080
  type: EDS
endpoints:
- clusterName: kube_gwtest_reviews_8080
  endpoints:
  - lbEndpoints:
    - endpoint:
        address:
          socketAddress:
            address: 10.244.1.11
            portValue: 8080
      loadBalancingWeight: 1
    loadBalancingWeight: 1
listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.csrf
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.csrf.v3.CsrfPolicy
            filterEnabled:
              defaultValue: {}
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: http
        statPrefix: http
        useRemoteAddress: true
    name: http
  name: http
routes:
- ignorePortInHostMatching: true
  name: http
  typedPerFilterConfig:
    envoy.filters.http.csrf:
      '@type': type.googleapis.com/envoy.extensions.filters.http.csrf.v3.CsrfPolicy
      additionalOrigins:
      - exact: https://www.example.org
      - exact: https://www.example.io
      filterEnabled:
        defaultValue:
          numerator: 80
        runtimeKey: csrf.percentage_enabled
  virtualHosts:
  - domains:
    - www.example.com
    name: http~www_example_com
    routes:
    - match:
        prefix: /
      name: http~www_example_com-route-0-httproute-my-route-gwtest-0-0-matcher-0
      route:
        cluster: kube_gwtest_reviews_8080
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
